// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Google Logout With children, custom text, and default props has inline styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#fff",
  "border": "1px solid transparent",
  "borderRadius": 2,
  "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
  "color": "rgba(0, 0, 0, .54)",
  "display": "inline-flex",
  "fontFamily": "Roboto, sans-serif",
  "fontSize": 14,
  "fontWeight": "500",
  "opacity": 0.6,
  "padding": 0,
}
`;

exports[`Google Logout With children, custom text, and default props render the button 1`] = `
<button
  disabled={true}
  onClick={[Function]}
  onMouseDown="() => setActive(true)"
  onMouseEnter="() => setHovered(true)"
  onMouseLeave="() => { setHovered(false); setActive(false); }"
  onMouseUp="() => setActive(false)"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "border": "1px solid transparent",
      "borderRadius": 2,
      "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
      "color": "rgba(0, 0, 0, .54)",
      "display": "inline-flex",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 14,
      "fontWeight": "500",
      "opacity": 0.6,
      "padding": 0,
    }
  }
>
  <span
    style={
      Object {
        "fontWeight": 500,
        "paddingBottom": 10,
        "paddingLeft": 0,
        "paddingRight": 10,
        "paddingTop": 10,
      }
    }
  >
    test
  </span>
</button>
`;

exports[`Google Logout With custom class and custom style has inline styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#fff",
  "border": "1px solid transparent",
  "borderRadius": 2,
  "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
  "color": "rgba(0, 0, 0, .54)",
  "display": "inline-flex",
  "fontFamily": "Roboto, sans-serif",
  "fontSize": 14,
  "fontWeight": "500",
  "opacity": 0.6,
  "padding": 0,
}
`;

exports[`Google Logout With custom class and custom style render the button 1`] = `
<button
  className="test-class"
  disabled={true}
  onClick={[Function]}
  onMouseDown="() => setActive(true)"
  onMouseEnter="() => setHovered(true)"
  onMouseLeave="() => { setHovered(false); setActive(false); }"
  onMouseUp="() => setActive(false)"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "border": "1px solid transparent",
      "borderRadius": 2,
      "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
      "color": "rgba(0, 0, 0, .54)",
      "display": "inline-flex",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 14,
      "fontWeight": "500",
      "opacity": 0.6,
      "padding": 0,
    }
  }
>
  <span
    style={
      Object {
        "fontWeight": 500,
        "paddingBottom": 10,
        "paddingLeft": 0,
        "paddingRight": 10,
        "paddingTop": 10,
      }
    }
  >
    Logout of Google
  </span>
</button>
`;

exports[`Google Logout With custom class and default props has inline styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#fff",
  "border": "1px solid transparent",
  "borderRadius": 2,
  "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
  "color": "rgba(0, 0, 0, .54)",
  "display": "inline-flex",
  "fontFamily": "Roboto, sans-serif",
  "fontSize": 14,
  "fontWeight": "500",
  "opacity": 0.6,
  "padding": 0,
}
`;

exports[`Google Logout With custom class and default props render the button 1`] = `
<button
  className="test-class"
  disabled={true}
  onClick={[Function]}
  onMouseDown="() => setActive(true)"
  onMouseEnter="() => setHovered(true)"
  onMouseLeave="() => { setHovered(false); setActive(false); }"
  onMouseUp="() => setActive(false)"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "border": "1px solid transparent",
      "borderRadius": 2,
      "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
      "color": "rgba(0, 0, 0, .54)",
      "display": "inline-flex",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 14,
      "fontWeight": "500",
      "opacity": 0.6,
      "padding": 0,
    }
  }
>
  <span
    style={
      Object {
        "fontWeight": 500,
        "paddingBottom": 10,
        "paddingLeft": 0,
        "paddingRight": 10,
        "paddingTop": 10,
      }
    }
  >
    Logout of Google
  </span>
</button>
`;

exports[`Google Logout With custom text and default props has inline styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#fff",
  "border": "1px solid transparent",
  "borderRadius": 2,
  "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
  "color": "rgba(0, 0, 0, .54)",
  "display": "inline-flex",
  "fontFamily": "Roboto, sans-serif",
  "fontSize": 14,
  "fontWeight": "500",
  "opacity": 0.6,
  "padding": 0,
}
`;

exports[`Google Logout With custom text and default props render the button 1`] = `
<button
  disabled={true}
  onClick={[Function]}
  onMouseDown="() => setActive(true)"
  onMouseEnter="() => setHovered(true)"
  onMouseLeave="() => { setHovered(false); setActive(false); }"
  onMouseUp="() => setActive(false)"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "border": "1px solid transparent",
      "borderRadius": 2,
      "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
      "color": "rgba(0, 0, 0, .54)",
      "display": "inline-flex",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 14,
      "fontWeight": "500",
      "opacity": 0.6,
      "padding": 0,
    }
  }
>
  <span
    style={
      Object {
        "fontWeight": 500,
        "paddingBottom": 10,
        "paddingLeft": 0,
        "paddingRight": 10,
        "paddingTop": 10,
      }
    }
  >
    buttonText
  </span>
</button>
`;

exports[`Google Logout With default props has inline styles 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#fff",
  "border": "1px solid transparent",
  "borderRadius": 2,
  "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
  "color": "rgba(0, 0, 0, .54)",
  "display": "inline-flex",
  "fontFamily": "Roboto, sans-serif",
  "fontSize": 14,
  "fontWeight": "500",
  "opacity": 0.6,
  "padding": 0,
}
`;

exports[`Google Logout With default props render the button 1`] = `
<button
  disabled={true}
  onClick={[Function]}
  onMouseDown="() => setActive(true)"
  onMouseEnter="() => setHovered(true)"
  onMouseLeave="() => { setHovered(false); setActive(false); }"
  onMouseUp="() => setActive(false)"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "border": "1px solid transparent",
      "borderRadius": 2,
      "boxShadow": "0 2px 2px 0 rgba(0, 0, 0, .24), 0 0 1px 0 rgba(0, 0, 0, .24)",
      "color": "rgba(0, 0, 0, .54)",
      "display": "inline-flex",
      "fontFamily": "Roboto, sans-serif",
      "fontSize": 14,
      "fontWeight": "500",
      "opacity": 0.6,
      "padding": 0,
    }
  }
>
  <span
    style={
      Object {
        "fontWeight": 500,
        "paddingBottom": 10,
        "paddingLeft": 0,
        "paddingRight": 10,
        "paddingTop": 10,
      }
    }
  >
    Logout of Google
  </span>
</button>
`;
